--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
+    "express": "^4.14.0",
     "http": "0.0.0",
     "material-ui": "^0.15.0",
     "morgan": "^1.7.0",
