--- a/package.json
+++ b/package.json
@@ -10,29 +10,33 @@
   "author": "Sara Gee",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.16.3",
     "express": "^4.14.0",
     "http": "0.0.0",
-    "material-ui": "^0.15.0",
+    "immutability-helper": "^2.0.0",
+    "material-ui": "^0.15.4",
     "morgan": "^1.7.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react": "^15.3.2",
+    "react-addons-update": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.5.2",
-    "socket.io": "^1.4.6",
-    "socket.io-client": "^1.4.6",
-    "webpack-dev-server": "^1.14.1"
+    "redux": "^3.6.0",
+    "socket.io": "^1.5.0",
+    "socket.io-client": "^1.5.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
