--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Sara Gee",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.1",
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^6.1.2",
@@ -22,10 +23,14 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.16.3",
+    "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-generator": "^4.13.4",
     "http": "0.0.0",
     "immutability-helper": "^2.0.0",
     "material-ui": "^0.15.4",
+    "mongoose": "^4.6.3",
     "morgan": "^1.7.0",
     "react": "^15.3.2",
     "react-addons-update": "^15.3.2",
